infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-traffic-service
spec:
  selector:
    app: smart-traffic-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
